hphp/hack/test/typecheck/interface_override_trait2.php.exp
ERROR: File "interface_override_trait2.php", line 23, characters 13-13:
Constant BAR is defined concretely in multiple ancestors (Typing[4374])
  File "interface_override_trait2.php", line 12, characters 16-18:
  One conflicting definition is here, inherited through T
  File "interface_override_trait2.php", line 4, characters 16-18:
  Another conflicting definition is here, inherited through B
ERROR: File "interface_override_trait2.php", line 23, characters 13-13:
Constant BAR1 is defined concretely in multiple ancestors (Typing[4374])
  File "interface_override_trait2.php", line 13, characters 16-19:
  One conflicting definition is here, inherited through T
  File "interface_override_trait2.php", line 5, characters 16-19:
  Another conflicting definition is here, inherited through B
ERROR: File "interface_override_trait2.php", line 23, characters 13-13:
Constant BAR2 is defined concretely in multiple ancestors (Typing[4374])
  File "interface_override_trait2.php", line 14, characters 16-19:
  One conflicting definition is here, inherited through T
  File "interface_override_trait2.php", line 6, characters 16-19:
  Another conflicting definition is here, inherited through B
ERROR: File "interface_override_trait2.php", line 23, characters 23-23:
Some members in class `A` are incompatible with those declared in type `B` (Typing[4374])
  File "interface_override_trait2.php", line 12, characters 16-18:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_override_trait2.php", line 4, characters 16-18:
  `BAR` inherited from `I1`
  File "interface_override_trait2.php", line 12, characters 16-18:
  conflicts with constant `BAR` inherited from `I`.
ERROR: File "interface_override_trait2.php", line 23, characters 23-23:
Some members in class `A` are incompatible with those declared in type `B` (Typing[4374])
  File "interface_override_trait2.php", line 13, characters 16-19:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_override_trait2.php", line 5, characters 16-19:
  `BAR1` inherited from `I1`
  File "interface_override_trait2.php", line 13, characters 16-19:
  conflicts with constant `BAR1` inherited from `I`.
ERROR: File "interface_override_trait2.php", line 23, characters 23-23:
Some members in class `A` are incompatible with those declared in type `B` (Typing[4374])
  File "interface_override_trait2.php", line 14, characters 16-19:
  Non-abstract constants defined in an interface or trait cannot conflict with other inherited constants.
  File "interface_override_trait2.php", line 6, characters 16-19:
  `BAR2` inherited from `I1`
  File "interface_override_trait2.php", line 14, characters 16-19:
  conflicts with constant `BAR2` inherited from `I`.
